--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "type": "git",
     "url": "https://github.com/brosquinha/ICP"
   },
-  "license": "ICS",
+  "license": "UNLICENSED",
   "main": "ICP.js",
   "scripts": {
     "start": "node ICP.js",
@@ -19,6 +19,12 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-preset-es2015": "^6.24.1",
-    "mocha": "^5.2.0"
+    "chai": "^4.1.2",
+    "jsdom": "12.0.0",
+    "jsdom-global": "3.0.2",
+    "mocha": "^5.2.0",
+    "sinon": "^6.2.0",
+    "webpack": "^4.17.2",
+    "webpack-cli": "^3.1.0"
   }
 }
