Expandindo DOMHandler e testes com Sinon

--- a/src/icp_config.json
+++ b/src/icp_config.json
@@ -1,4 +1,5 @@
 {
     "endpoint": "http://pt.starwars.wikia.com",
-    "onAbortSaveProgress": false
+    "onAbortSaveProgress": false,
+    "onAbortAskForFeedback": true
 }
